# housekeeping-api-haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  hie.yaml  housekeeping-api-haskell.cabal  housekeeping-api-haskell.tix
app/: Main.hs
postgres/init/: init.sql
postgres/schema/: auth_password.sql  message.sql  user.sql
src/Housekeeping/: API.hs  CLI.hs  Callable.hs  Cascade.hs  DataSource.hs  Handler.hs  Model.hs  Prelude.hs  Session.hs
src/Housekeeping/Service/: Auth.hs  Hello.hs
src/Housekeeping/Service/Auth/: Controller.hs  Handler.hs  Interface.hs  Model.hs  Repository.hs
src/Housekeeping/Service/Hello/: Controller.hs  Handler.hs  Interface.hs  Model.hs  Repository.hs
test/Housekeeping/: CLISpec.hs  HandlerSpec.hs  TestHelper.hs
test/Housekeeping/Service/Auth/: ControllerSpec.hs  HandlerSpec.hs  RepositorySpec.hs
test/Housekeeping/Service/Hello/: ControllerSpec.hs  HandlerSpec.hs  RepositorySpec.hs
